--- a/credit_score.ipynb
+++ b/credit_score.ipynb
@@ -62,7 +62,7 @@
    ],
    "source": [
     "# Load Dataset\n",
-    "file_path = r\"D:\\AI Projects\\ML Projects\\Credit Score Classification/default of credit card clients.xls\"\n",
+    "file_path = r\"default of credit card clients.xls\"\n",
     "df = pd.read_excel(file_path, header=1)   # header=1 skips first row\n",
     "\n",
     "print(\"Dataset Shape:\", df.shape)\n",
